# fastapi-keycloak

./: README.md  get-admin-token.py  pyproject.toml
src/: config.py  controller.py  main.py  models.py  service.py
