[tool.poetry]
name = "fastapi-keycloak"
version = "0.0.1"
description = ""
authors = ["Abdullah Alqahtani <abdullah@lameh.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
python-keycloak = "^5.1.1"
httpx = "^0.28.1"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.1"
python-multipart = "^0.0.20"
uvicorn = "^0.34.0"
httptools = "^0.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"